[tool.poetry]
name = "pathofbuilding-python"
version = "0.1.0"
description = "Python port of Path of Building"
authors = ["ppoelzl <33464174+ppoelzl@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
SLPP = "^1.2.3"
parse = "^1.19.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.idea
  | build
  | dist
  | docs
)/
'''

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
multi_line_output = 3

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.idea
  | build
  | dist
  | tests
  | docs
)/
'''
